syntax = "proto3";

package file;

option go_package="proto/storage";

service File {
  rpc Upload(UploadReq) returns (UploadResp);
}

message UploadReq {
  string token;

}

message UploadResp {

}
