syntax="proto3";

package storage;

option go_package = "pb/storage_engine";

message CreateStorageReq {
  string token = 1;

}

message CreateStorageResp {
  int64 StorageId = 1;
}

message FindStorageByHashReq{
  string Hash=1;
}

message FindStorageByHashResp{
  int64 StorageId = 1;
  int32 Size=2;
  bool  IsComplete=3;
  string RealPath=4;
}

message GenerateDownloadURLReq {
  string Hash = 1;
  int64 Expire = 2;
}

message GenerateDownloadURLResp {
  string URL = 1;
}

service Storage {
  rpc FindStorageByHash(FindStorageByHashReq)returns(FindStorageByHashResp);
  rpc CreateStorage(CreateStorageReq) returns (CreateStorageResp);
  rpc GenerateDownloadURL(GenerateDownloadURLReq) returns (GenerateDownloadURLResp);
}

